--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   align-items: center;
   height: 100vh;
   font-family: "MinhaFonte", serif; /* Use uma fonte medieval */
-  color: #fff;
+  color: #f4faf2;
   font-size: 2.2rem;
 }
 
